max width percent값을 scss변수로 관리

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "../sass/abstracts/variables";
+
 * {
   -webkit-tap-highlight-color:rgba(0, 0, 0, 0)
 }
@@ -27,7 +29,7 @@ a {
 }
 
 .container {
-  max-width: 70%;
+  max-width: $MAX_WIDTH_PERCENT;
   margin: 0 auto;
 }
 
