버튼에 링크 추가, 버튼에 호버 색상 추가

--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -2,4 +2,6 @@ $BLACK : #000000;
 $GREY_292C33 : #292C33;
 $WHITE: #FFFFFF;
 $RED_EC675C : #EC675C;
+$RED_A94C43 : #a94c43;
 $GREEN_62C555 : #62C555;
+$GREEN_45853C : #45853c;
