--- a/src/shared/components/Header/header.scss
+++ b/src/shared/components/Header/header.scss
@@ -1,11 +1,14 @@
 @import "/sass/abstracts/colors";
-
-$HEADER_HEIGHT : 70px;
-// $HEADER_BUTTON_WIDTH : 80px;
+@import "/sass/abstracts/variables";
 
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: $HEADER_HEIGHT;
     background-color: $GREY_292C33;
+    box-shadow: 0px 0px 8px $GREY_292C33;
 
     .container {
         height: 100%;
