--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,5 +1,6 @@
 $BLACK : #000000;
 $GREY_292C33 : #292C33;
+$SHADOW_GREY : #c8c8c8;
 $WHITE: #FFFFFF;
 $RED_EC675C : #EC675C;
 $RED_A94C43 : #a94c43;
