게임 페이지 컴포넌트 배열

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,10 @@ a {
   justify-content: center;
 }
 
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
 .align-items-center {
   align-items: center;
 }
