--- a/src/pages/game/components/ScoreTable/score-table.scss
+++ b/src/pages/game/components/ScoreTable/score-table.scss
@@ -1,6 +1,7 @@
 @import "/sass/abstracts/colors";
 
 .paper {
+    // margin-left: auto;
     background-color: rgb(254, 250, 244);
     padding: 20px;
     box-shadow: 0px 3px 8px 3px $SHADOW_GREY;
